[package]
name = "bind"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.7"
bytes = "1.5.0"
eyre = "0.6.11"
tokio = { version = "1.35.1", features = ["full"] }
webrtc = { git = "https://github.com/webrtc-rs/webrtc.git", version = "0.9.0" }
webrtc-dtls = { git = "https://github.com/webrtc-rs/webrtc.git", version = "0.8.0", features = ["pem"] }
